force-app/main/default/objects/RelatedQuickLink__mdt/RelatedQuickLink__mdt.object-meta.xml
<CustomObject>
    <label>RelatedQuickLink</label>
    <pluralLabel>RelatedQuickLinks</pluralLabel>
</CustomObject>