force-app/main/default/objects/RelatedQuickLink__mdt/fields/ConfigName__c.field-meta.xml
<CustomField>
    <fullName>ConfigName__c</fullName>
    <label>ConfigName</label>
    <type>TextArea</type>
</CustomField>