force-app/main/default/objects/RelatedQuickLink__mdt/fields/LinksSetup__c.field-meta.xml
<CustomField>
    <fullName>LinksSetup__c</fullName>
    <label>LinksSetup</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>