force-app/main/default/objects/RelatedQuickLink__mdt/fields/TargetObject__c.field-meta.xml
<CustomField>
    <fullName>TargetObject__c</fullName>
    <label>TargetObject</label>
    <type>TextArea</type>
</CustomField>